--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ main p {
 .group img {
   width: 100%;
 }
-
+/* Groups & Items  (Mobile First) */
 .group {
   display: flex;
   flex-direction: column;
